Clean up hero and player interactions. Make player health limit independent of hero